# oereb_server

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Justfile  check_pdf.py  create_config.py  dev-requirements.txt  development.mako  docker-compose.yml  gunicorn_config.py  oereb_server.mako  old_setup.py  production.mako  pyproject.toml  pyramid_oereb_standard.yml  pytest.ini  requirements.txt  run_oereb_server.py  run_oereb_server_gunicorn.sh  run_oereb_server_waitress.py  run_oereb_server_waitress.sh  run_oereb_server_waitress_local.py  setup.py
.github/workflows/: docker-image.yml  podman_build.yml  podman_compose.yml
apache/: wo_redirector.wsgi  wsgi.conf
oereb_server/: __init__.py  hook_methods.py  tests.py  views.py
oereb_server/contrib/legend/: legend.py
oereb_server/contrib/print_proxy/: mapfish_print.py
oereb_server/contrib/wo_redirect/: wo_redirect.py
oereb_server/models/: __init__.py  airports_building_lines.py  airports_project_planning_zones.py  airports_security_zone_plans.py  cantonal_forest_distance_lines.py  cantonal_land_use_plans.py  cantonal_nature_reserves.py  cantonal_street_building_lines.py  contaminated_civil_aviation_sites.py  contaminated_military_sites.py  contaminated_public_transport_sites.py  contaminated_sites.py  forest_distance_lines.py  forest_perimeters.py  groundwater_protection_sites.py  groundwater_protection_zones.py  land_use_plans.py  main.py  motorways_building_lines.py  motorways_project_planing_zones.py  noise_sensitivity_levels.py  railways_building_lines.py  railways_project_planning_zones.py  regional_forest_distance_lines.py  regional_land_use_plans.py  regional_protected_botanical_objects.py  regional_protected_geological_objects.py  theme.py
sql/: availability_view.sql
src/oereb_server/: __init__.py  hook_methods.py
src/oereb_server/contrib/legend/: legend.py
src/oereb_server/contrib/legend_topic/: legend_topic.py
src/oereb_server/contrib/status/: status.py
src/oereb_server/contrib/versions/: version.py
src/oereb_server/models/: __init__.py  main.py  theme.py
src/oereb_server/scripts/: create_config.py
tests/: conftest.py  test_capabilities.py  test_concurrent_extracts.py  test_concurrent_extracts_async.py  test_concurrent_extracts_async2.py  test_cors.py  test_extract.py  test_general.py  test_getegrid.py  test_legend.py  test_legend_topic.py  test_stats.py  test_version.py  test_versions.py  test_woredirectory.py
