[build-system]
requires = ["setuptools >= 61.0", "pyramid==2.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oereb_server"
dynamic = ["version"]
authors = [
    {name = "Peter Schär", email = "peter.schaer@be.ch"}
]
description = "Implementierung von pyramid_oereb für den ÖREB-Kataster des Kantons Bern."
requires-python = "==3.12.10"
dependencies = [
    # Aus den pyramid_oereb-Requirements übernommen
    "pypdf==6.10.2",
    "filetype==1.2.0",
    "geoalchemy2==0.19.0",
    "pyramid==2.1",
    "pyramid-debugtoolbar==4.12.1",
    "qrcode==8.2",
    "image==1.5.33",
    "shapely==2.1.2",
    "SQLAlchemy==2.0.49",
    "pyaml-env==1.2.2",
    "urllib3==2.6.3",
    "waitress==3.0.2",
    "pyreproj==3.0.0",
    "mako-render==0.1.0",
    "requests==2.33.1",
    "geolink-formatter==2.0.7",
    "c2cwsgiutils[standard]==6.1.9",
    "gunicorn==26.0.0",
    "pyramid-oereb==2.5.9"
]

[project.urls]
Homepage = "https://www.be.ch/oerebk"
Repository = "https://github.com/AGIBE/oereb_server"

[project.entry-points."paste.app_factory"]
main = "oereb_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "oereb_server.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "pylint>=3.2.7",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.1.0",
    "xmlschema>=3.4.2",
]